# pysub20

./: AUTHORS  ChangeLog  README.rst  pyproject.toml  setup.cfg  setup.py
src/sub20/: __init__.py  _errors.py  device.py
src/sub20/ctypeslib/: __init__.py  libsub.py  libsub20.py  utils.py
