[metadata]
name = pysub20
version = 0.0.2
description = Python wrapper around XDIMAX SUB-20 library
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Paul Grebeniuk
author_email=paul@coolautomation.com
maintainer=Paul Grebeniuk
maintainer_email=paul@coolautomation.com
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
keywords = utility
url = https://github.com/paulgr2008/pysub20
project_urls =
    Source=https://github.com/paulgr2008/pysub20
    Documentation=http://www.xdimax.com/sub20/sub20.html


[options]
packages = find:
package_dir =
    =src

python_requires = >=3.6
include_package_data = True


[options.packages.find]
where = src

[bdist_wheel]
universal = 1

